build(branch): adiciona permisão para deploy de PR

--- a/.github/workflows/cloud-run-deploy.yml
+++ b/.github/workflows/cloud-run-deploy.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - homologacao
+  pull_request:
+    branches:
+      - homologacao
 
 jobs:
   dockerize-and-deploy:
